@@ -157,7 +157,8 @@ static const char *add_authn_provider(cmd_parms * cmd, void *config,
 
     /* lookup and cache the actual provider now */
     newp->provider = ap_lookup_provider(AUTHN_PROVIDER_GROUP,
-                                        newp->provider_name, "0");
+                                        newp->provider_name,
+                                        AUTHN_PROVIDER_VERSION);
 
     if (newp->provider == NULL) {
         /*
@@ -717,7 +718,8 @@ static int check_authn(request_rec * r, const char *sent_user, const char *sent_
          */
         if (!current_provider) {
             provider = ap_lookup_provider(AUTHN_PROVIDER_GROUP,
-                                          AUTHN_DEFAULT_PROVIDER, "0");
+                                          AUTHN_DEFAULT_PROVIDER,
+                                          AUTHN_PROVIDER_VERSION);
 
             if (!provider || !provider->check_password) {
                 ap_log_rerror(APLOG_MARK, APLOG_ERR, 0, r, LOG_PREFIX
