@@ -269,7 +269,8 @@ static void authn_dbd_hooks(apr_pool_t *p)
         &authn_dbd_realm
     };
 
-    ap_register_auth_provider(p, AUTHN_PROVIDER_GROUP, "dbd", "0",
+    ap_register_auth_provider(p, AUTHN_PROVIDER_GROUP, "dbd",
+                              AUTHN_PROVIDER_VERSION,
                               &authn_dbd_provider, AP_AUTH_INTERNAL_PER_CONF);
 }
 module AP_MODULE_DECLARE_DATA authn_dbd_module =
