@@ -189,7 +189,8 @@ static const authn_provider authn_dbm_provider =
 
 static void register_hooks(apr_pool_t *p)
 {
-    ap_register_auth_provider(p, AUTHN_PROVIDER_GROUP, "dbm", "0",
+    ap_register_auth_provider(p, AUTHN_PROVIDER_GROUP, "dbm",
+                              AUTHN_PROVIDER_VERSION,
                               &authn_dbm_provider, AP_AUTH_INTERNAL_PER_CONF);
 }
 
