@@ -163,7 +163,8 @@ static const authn_provider authn_file_provider =
 
 static void register_hooks(apr_pool_t *p)
 {
-    ap_register_auth_provider(p, AUTHN_PROVIDER_GROUP, "file", "0",
+    ap_register_auth_provider(p, AUTHN_PROVIDER_GROUP, "file",
+                              AUTHN_PROVIDER_VERSION,
                               &authn_file_provider, AP_AUTH_INTERNAL_PER_CONF);
 }
 
