@@ -2,6 +2,8 @@
 Changes with Apache 2.3.0
 [ When backported to 2.2.x, remove entry from this file ]
 
+  *) authn/z: Convert common provider version strings to macros.
+
   *) http_filters: Don't return 100-continue on redirects. PR 43711
      [Ruediger Pluem]
 
